# ark-key-router

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pyproject.toml
config/: key-weights.json  model-routes.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
src/: config.rs  front_proxy.rs  json_config.rs  key_store.rs  main.rs  proxy.rs  router_state.rs  state_store.rs  usage_store.rs
src/ark_key_router/: config.py  dashboard.py  proxy.py  state.py  usage_store.py
src/llm_provider_router/: config.py  dashboard.py  proxy.py  state.py  state_store.py  usage_store.py
systemd/: llm-provider-router-backend@.service  llm-provider-router.service
tests/: test_state.py
