[package]
name = "llm-provider-router"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible provider router proxy with Rust backend and React dashboard"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.8", features = ["json", "macros"] }
bytes = "1.10"
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
http = "1.3"
httpdate = "1.0"
rand = "0.8"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
tempfile = "3.14"
